@@ -2090,12 +2090,13 @@ int Actor::figure_hit_points
 			say("\"Cheater!\"");
 		else
 			say(first_ouch, last_ouch);
-	if (get_flag(Obj_flags::zombie) ||	// Can't kill zombies.
+	if (Game::get_game_type() == SERPENT_ISLE &&
+	    (get_flag(Obj_flags::zombie) ||	// Can't kill zombies.
 					// A guess for SI's Cantra-vs-Batlin.
 					// (+++++Probably wrong, but fixes
 					//  crystal-ball scene for now!)
 	    (this == gwin->get_camera_actor() && 
-					this != gwin->get_main_actor()))
+					this != gwin->get_main_actor())))
 		if (newhp < 1)		// Don't go < 1.
 			hp = oldhealth - 1;
 	reduce_health(hp);
