@@ -219,7 +219,7 @@
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0x9c
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0x9d
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0x9e
-	USECODE_INTRINSIC_PTR(fade_in),	// ++++PURE GUESS	// 0x9f
+	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0x9f
 	// End Pack
 
 	USECODE_INTRINSIC_PTR(is_not_blocked),			// 0xa0
