@@ -304,7 +304,6 @@ private:
 	USECODE_INTRINSIC_DECL(clear_item_flag);
 	USECODE_INTRINSIC_DECL(run_usecode);
 	USECODE_INTRINSIC_DECL(fade_palette);
-	USECODE_INTRINSIC_DECL(fade_in);
 	USECODE_INTRINSIC_DECL(get_party_list2);
 	USECODE_INTRINSIC_DECL(get_party_ids);
 	USECODE_INTRINSIC_DECL(set_camera);
